# yolov8-deploy

./: LICENSE  README.md  infer.py  mod.py  pyproject.toml  requirements.txt
